--- a/views/index.erb
+++ b/views/index.erb
@@ -108,24 +108,43 @@
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
                 <h2 class="w3-wide">LA BANDA</h2>
                 <p class="w3-opacity">
-                    <i>fiesta</i>
+                    <i>F!iesta</i>
                 </p>
-                <p class="w3-justify">La banda está conformada por Gabriel en la guitarra y voz, Hernan en guitarra y coros, Uriel en bateria y Fausto en el bajo y coros.</p>
+                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Walter en el saxo, Gastón en trompeta y X en percusión </p>
                 <div class="w3-row w3-padding-32">
                     <div class="w3-quarter">
-                        <p>Gabriel</p>
+                        <p>Beto</p>
                         <img src="/imagenes/gabrielperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
-                        <p>Hernan</p>
+                        <p>Uriel</p>
                         <img src="/imagenes/hernanperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
-                        <p>Uri</p>
+                        <p>Hernán</p>
                         <img src="/imagenes/uriperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
-                        <p>Fausto</p>
+                        <p>Danilo</p>
+                        <img src="/imagenes/faustoperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                    </div>
+                </div>
+
+                <div class="w3-row w3-padding-32">
+                    <div class="w3-quarter">
+                        <p>Romina</p>
+                        <img src="/imagenes/gabrielperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                    </div>
+                    <div class="w3-quarter">
+                        <p>Walter</p>
+                        <img src="/imagenes/hernanperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                    </div>
+                    <div class="w3-quarter">
+                        <p>Gaston</p>
+                        <img src="/imagenes/uriperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                    </div>
+                    <div class="w3-quarter">
+                        <p>Percusión</p>
                         <img src="/imagenes/faustoperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
                 </div>
@@ -186,40 +205,6 @@
                                 <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Compra tus entradas</button>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Ticket Modal -->
-            <div id="ticketModal" class="w3-modal">
-                <div class="w3-modal-content w3-animate-top w3-card-8">
-                    <header class="w3-container w3-teal w3-center w3-padding-32">
-                        <span onclick="document.getElementById('ticketModal').style.display='none'" class="w3-closebtn w3-padding-xlarge w3-xxlarge w3-display-topright">×</span>
-                        <h2 class="w3-wide">
-                            <i class="fa fa-suitcase w3-margin-right"></i>Entradas</h2>
-                    </header>
-                    <div class="w3-container">
-                        <p>
-                            <label>
-                                <i class="fa fa-shopping-cart"></i>
-                                Tickets, $15 por persona</label>
-                        </p>
-                        <input class="w3-input w3-border" type="text" placeholder="How many?">
-                        <p>
-                            <label>
-                                <i class="fa fa-user"></i>
-                                Enviar a</label>
-                        </p>
-                        <input class="w3-input w3-border" type="text" placeholder="Enter email">
-                        <button class="w3-btn-block w3-teal w3-padding-12 w3-section w3-right">Pagar
-                            <i class="fa fa-check"></i>
-                        </button>
-                        <button class="w3-btn w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Cerrar
-                            <i class="fa fa-remove"></i>
-                        </button>
-                        <p class="w3-right">Necesitas
-                            <a href="#" class="w3-text-blue">ayuda?</a>
-                        </p>
                     </div>
                 </div>
             </div>
