--- a/views/index.erb
+++ b/views/index.erb
@@ -110,7 +110,8 @@
                 <p class="w3-opacity">
                     <i>F!iesta</i>
                 </p>
-                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Walter en el saxo, Gastón en trompeta y X en percusión </p>
+                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Walter en el saxo, Gastón en trompeta y X en percusión
+                </p>
                 <div class="w3-row w3-padding-32">
                     <div class="w3-quarter">
                         <p>Beto</p>
