--- a/views/index.erb
+++ b/views/index.erb
@@ -152,122 +152,68 @@
             </div>
 
             <!-- The Tour Section -->
-            <div class="w3-black">
-                <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-                    <h2 class="w3-wide w3-center">RECITALES</h2>
-                    <p class="w3-opacity w3-center">
-                        <i>No te olvides de comprar tus entradas !!
-                        </i>
-                    </p><br>
-
-                    <ul class="w3-ul w3-border w3-white w3-text-grey">
-                        <li class="w3-padding">Agosto
-                            <span class="w3-tag w3-red w3-margin-left">Agotadas</span>
-                        </li>
-                        <li class="w3-padding">Septiembre
-                            <span class="w3-tag w3-red w3-margin-left">Agotadas</span>
-                        </li>
-                        <li class="w3-padding">Octubre
-                            <span class="w3-badge w3-right w3-margin-right">Comprar</span>
-                        </li>
-                    </ul>
-
-                    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-                        <div class="w3-third w3-margin-bottom">
-                            <img src="/imagenes/recital1.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-                            <div class="w3-container w3-white">
-                                <p>
-                                    <b>Bariloche</b>
-                                </p>
-                                <p class="w3-opacity">Viernes 27 Nov 2016</p>
-                                <p>Tremendo recital (?).</p>
-                                <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Compra tus entradas</button>
-                            </div>
-                        </div>
-                        <div class="w3-third w3-margin-bottom">
-                            <img src="/imagenes/recital2.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-                            <div class="w3-container w3-white">
-                                <p>
-                                    <b>Mendoza</b>
-                                </p>
-                                <p class="w3-opacity">Sabado 28 Nov 2016</p>
-                                <p>La pasamos espectacular (?)</p>
-                                <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Compra tus entradas</button>
-                            </div>
-                        </div>
-                        <div class="w3-third w3-margin-bottom">
-                            <img src="/imagenes/recital3.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-                            <div class="w3-container w3-white">
-                                <p>
-                                    <b>Melonio bar, Buenos Aires</b>
-                                </p>
-                                <p class="w3-opacity">Domingo 29 Nov 2016</p>
-                                <p>Show presentación de la banda</p>
-                                <button class="w3-btn w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Compra tus entradas</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- The Contact Section -->
-            <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-                <h2 class="w3-wide w3-center">CONTACTO</h2>
-                <p class="w3-opacity w3-center">
-                    <i>Fan? Organizar un recital? Dejanos tu mensaje !!</i>
-                </p>
-                <div class="w3-row w3-padding-32">
-                    <div class="w3-col m6 w3-large w3-margin-bottom">
-                        <i class="fa fa-map-marker" style="width:30px"></i>
-                        Buenos Aires, Argentina<br>
-                        <i class="fa fa-phone" style="width:30px"></i>
-                        Telefono: +54 11 151515<br>
-                        <i class="fa fa-envelope" style="width:30px"></i>
-                        Email: nohaysenial@gmail.com<br>
-                    </div>
-                    <div class="w3-col m6">
-                        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-                            <div class="w3-half">
-                                <input class="w3-input w3-border" type="text" placeholder="Name">
-                            </div>
-                            <div class="w3-half">
-                                <input class="w3-input w3-border" type="text" placeholder="Email">
-                            </div>
-                        </div>
-                        <input class="w3-input w3-border" type="text" placeholder="Comment">
-                        <button class="w3-btn w3-section w3-right">Enviar</button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- End Page Content -->
         </div>
+    </div>
+</div>
 
-        <!-- Footer -->
-        <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-            <a href="https://www.facebook.com/nhsenal/" class="w3-hover-text-indigo">
-                <i class="fa fa-facebook-official"></i>
-            </a>
-            <a href="#" class="w3-hover-text-red">
-                <i class="fa fa-pinterest-p"></i>
-            </a>
-            <a href="#" class="w3-hover-text-light-blue">
-                <i class="fa fa-twitter"></i>
-            </a>
-            <a href="#" class="w3-hover-text-grey">
-                <i class="fa fa-flickr"></i>
-            </a>
-            <a href="#" class="w3-hover-text-indigo">
-                <i class="fa fa-linkedin"></i>
-            </a>
-            <p class="w3-medium">Creado por Hernán Dorra - 2016
-                <a href="#" target="_blank">https://www.facebook.com/Iconoclasta</a>
-            </p>
-        </footer>
+<!-- The Contact Section -->
+<div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+    <h2 class="w3-wide w3-center">CONTACTO</h2>
+    <p class="w3-opacity w3-center">
+        <i>Fan? Organizar un recital? Dejanos tu mensaje !!</i>
+    </p>
+    <div class="w3-row w3-padding-32">
+        <div class="w3-col m6 w3-large w3-margin-bottom">
+            <i class="fa fa-map-marker" style="width:30px"></i>
+            Buenos Aires, Argentina<br>
+            <i class="fa fa-phone" style="width:30px"></i>
+            Telefono: +54 11 151515<br>
+            <i class="fa fa-envelope" style="width:30px"></i>
+            Email: buenacosecha@gmail.com<br>
+        </div>
+        <div class="w3-col m6">
+            <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
+                <div class="w3-half">
+                    <input class="w3-input w3-border" type="text" placeholder="Name">
+                </div>
+                <div class="w3-half">
+                    <input class="w3-input w3-border" type="text" placeholder="Email">
+                </div>
+            </div>
+            <input class="w3-input w3-border" type="text" placeholder="Comment">
+            <button class="w3-btn w3-section w3-right">Enviar</button>
+        </div>
+    </div>
+</div>
 
-        <script src="/js/slide.js"></script>
-        <script src="/js/menu.js"></script>
-        <script src="/js/clicks.js"></script>
+<!-- End Page Content -->
+</div>
 
-    </body>
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+<a href="https://www.facebook.com/nhsenal/" class="w3-hover-text-indigo">
+    <i class="fa fa-facebook-official"></i>
+</a>
+<a href="#" class="w3-hover-text-red">
+    <i class="fa fa-pinterest-p"></i>
+</a>
+<a href="#" class="w3-hover-text-light-blue">
+    <i class="fa fa-twitter"></i>
+</a>
+<a href="#" class="w3-hover-text-grey">
+    <i class="fa fa-flickr"></i>
+</a>
+<a href="#" class="w3-hover-text-indigo">
+    <i class="fa fa-linkedin"></i>
+</a>
+<p class="w3-medium">Creado por Hernán Dorra - 2016
+    <a href="#" target="_blank">https://www.facebook.com/Iconoclasta</a>
+</p>
+</footer>
+
+<script src="/js/slide.js"></script>
+<script src="/js/menu.js"></script>
+<script src="/js/clicks.js"></script>
+
+</body>
 </html>
