agregando logo al home

--- a/views/index.erb
+++ b/views/index.erb
@@ -77,29 +77,29 @@
 
             <!-- Automatic Slideshow Images -->
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/todoscuro.jpg" style="width:100%">
+                <img src="/imagenes/logo.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Reunidos</h3>
+                    <h3>Proximamente!</h3>
                     <p>
-                        <b>Conversando</b>
+                        <b>mas novedades</b>
                     </p>
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/todos2.jpg" style="width:100%">
+                <img src="/imagenes/logo.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Ensayando 2</h3>
+                    <h3>Proximamente</h3>
                     <p>
-                        <b>Trabajando arduo!</b>
+                        <b>mas novedades</b>
                     </p>
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/recital.jpg" style="width:100%">
+                <img src="/imagenes/logo.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Tocando en Buenos Aires</h3>
+                    <h3>Proximamente</h3>
                     <p>
-                        <b>Recital muy especial</b>
+                        <b>mas novedades</b>
                     </p>
                 </div>
             </div>
