--- a/views/index.erb
+++ b/views/index.erb
@@ -110,43 +110,43 @@
                 <p class="w3-opacity">
                     <i>F!iesta</i>
                 </p>
-                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Walter en el saxo, Gastón en trompeta y X en percusión
+                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Walter en el saxo, Gastón en trompeta y Melina en percusión
                 </p>
                 <div class="w3-row w3-padding-32">
                     <div class="w3-quarter">
                         <p>Beto</p>
-                        <img src="/imagenes/gabrielperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
                         <p>Uriel</p>
-                        <img src="/imagenes/hernanperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
                         <p>Hernán</p>
-                        <img src="/imagenes/uriperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
                         <p>Danilo</p>
-                        <img src="/imagenes/faustoperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
                 </div>
 
                 <div class="w3-row w3-padding-32">
                     <div class="w3-quarter">
                         <p>Romina</p>
-                        <img src="/imagenes/gabrielperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
                         <p>Walter</p>
-                        <img src="/imagenes/hernanperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
                         <p>Gaston</p>
-                        <img src="/imagenes/uriperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
-                        <p>Percusión</p>
-                        <img src="/imagenes/faustoperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                        <p>Melina</p>
+                        <img src="/imagenes/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
                 </div>
             </div>
@@ -206,7 +206,7 @@
 <a href="#" class="w3-hover-text-indigo">
     <i class="fa fa-linkedin"></i>
 </a>
-<p class="w3-medium">Creado por Hernán Dorra - 2016
+<p class="w3-medium">Creado por Buena Cosecha - 2016
     <a href="#" target="_blank">https://www.facebook.com/Iconoclasta</a>
 </p>
 </footer>
