--- a/views/index.erb
+++ b/views/index.erb
@@ -191,7 +191,7 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-<a href="https://www.facebook.com/nhsenal/" class="w3-hover-text-indigo">
+<a href="https://www.facebook.com/buenacosecha/" class="w3-hover-text-indigo">
     <i class="fa fa-facebook-official"></i>
 </a>
 <a href="#" class="w3-hover-text-red">
@@ -207,7 +207,7 @@
     <i class="fa fa-linkedin"></i>
 </a>
 <p class="w3-medium">Creado por Buena Cosecha - 2016
-    <a href="#" target="_blank">https://www.facebook.com/Iconoclasta</a>
+    <a href="#" target="_blank">https://www.facebook.com/buenacosecha</a>
 </p>
 </footer>
 
