--- a/views/index.erb
+++ b/views/index.erb
@@ -108,7 +108,7 @@
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
                 <h2 class="w3-wide">LA BANDA</h2>
                 <p class="w3-opacity">
-                    <i>F!iesta</i>
+                    <i>Fiesta! ue ue uep !</i>
                 </p>
                 <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Walter en el saxo, Gastón en trompeta y Melina en percusión
                 </p>
@@ -191,7 +191,7 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-<a href="https://www.facebook.com/buenacosecha/" class="w3-hover-text-indigo">
+<a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo">
     <i class="fa fa-facebook-official"></i>
 </a>
 <a href="#" class="w3-hover-text-red">
@@ -207,7 +207,7 @@
     <i class="fa fa-linkedin"></i>
 </a>
 <p class="w3-medium">Creado por Buena Cosecha - 2016
-    <a href="#" target="_blank">https://www.facebook.com/buenacosecha</a>
+    <a href="#" target="_blank">https://www.facebook.com/buenacosechabanda</a>
 </p>
 </footer>
 
