--- a/views/index.erb
+++ b/views/index.erb
@@ -18,7 +18,7 @@
 
         <!-- Navbar -->
         <div class="w3-top">
-            <ul class="w3-navbar w3-black w3-card-2 w3-right-align">
+            <ul class="w3-navbar w3-deep-orange w3-card-2 w3-right-align">
                 <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
                     <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
                         <i class="fa fa-bars"></i>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/logo.jpg" style="width:100%">
+                <img src="/imagenes/banda1.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Proximamente</h3>
                     <p>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/logo.jpg" style="width:100%">
+                <img src="/imagenes/banda2.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Proximamente</h3>
                     <p>
