--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
     <body>
 
         <!-- Navbar -->
-        <div class="w3-top">
+        <div class="w3-top w3-right-align">
             <ul class="w3-navbar w3-deep-orange w3-card-2 w3-right-align">
                 <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
                     <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
