--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
     <body>
 
         <!-- Navbar -->
-        <div class="w3-top w3-right-align">
+        <div class="w3-top">
             <ul class="w3-navbar w3-deep-orange w3-card-2 w3-right-align">
                 <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
                     <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
@@ -28,7 +28,7 @@
                     <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">HOME</a>
                 </li>
                 <li class="w3-hide-small">
-                    <a href="#" class="w3-padding-large">BANDA</a>
+                    <a href="#" class="w3-padding-large">MÚSICA</a>
                 </li>
                 <li class="w3-hide-small">
                     <a href="#" class="w3-padding-large">FECHAS</a>
@@ -56,7 +56,7 @@
 
         <!-- Navbar on small screens -->
         <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-            <ul class="w3-navbar w3-left-align w3-black">
+            <ul class="w3-navbar w3-center-align w3-black">
                 <li>
                     <a class="w3-padding-large" href="#">BANDA</a>
                 </li>
