--- a/views/index.erb
+++ b/views/index.erb
@@ -110,7 +110,7 @@
                 <p class="w3-opacity">
                     <i>Fiesta! ue ue uep !</i>
                 </p>
-                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Walter en el saxo, Gastón en trompeta y Melina en percusión
+                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta y Melina en percusión
                 </p>
                 <div class="w3-row w3-padding-32">
                     <div class="w3-quarter">
@@ -137,7 +137,7 @@
                         <img src="/imagenes/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
-                        <p>Walter</p>
+                        <p>Daniel</p>
                         <img src="/imagenes/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
