--- a/views/index.erb
+++ b/views/index.erb
@@ -174,13 +174,13 @@
         <div class="w3-col m6">
             <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
                 <div class="w3-half">
-                    <input class="w3-input w3-border" type="text" placeholder="Name">
+                    <input class="w3-input w3-border" type="text" placeholder="Nombre">
                 </div>
                 <div class="w3-half">
                     <input class="w3-input w3-border" type="text" placeholder="Email">
                 </div>
             </div>
-            <input class="w3-input w3-border" type="text" placeholder="Comment">
+            <input class="w3-input w3-border" type="text" placeholder="Comentario">
             <button class="w3-btn w3-section w3-right">Enviar</button>
         </div>
     </div>
