--- a/views/index.erb
+++ b/views/index.erb
@@ -106,7 +106,7 @@
 
             <!-- The Band Section -->
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
-                <h2 class="w3-wide">LA BANDA</h2>
+               <h2 class="w3-wide">LA BANDA</h2>
                 <p class="w3-opacity">
                     <i>Fiesta! ue ue uep !</i>
                 </p>
@@ -114,41 +114,42 @@
                 </p>
                 <div class="w3-row w3-padding-32">
                     <div class="w3-quarter">
-                        <p>Beto</p>
+                      <ul><li><p>Beto</p>
                         <img src="/imagenes/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                    </div>
+                    </div></li>
                     <div class="w3-quarter">
-                        <p>Uriel</p>
+                        <li><p>Uriel</p>
                         <img src="/imagenes/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                    </div>
+                    </div></li>
                     <div class="w3-quarter">
-                        <p>Hernán</p>
+                        <li><p>Hernán</p>
                         <img src="/imagenes/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </div>
+                    </div></li>
                     <div class="w3-quarter">
-                        <p>Danilo</p>
+                        <li><p>Danilo</p>
                         <img src="/imagenes/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </div>
+                    </div></li>
                 </div>
 
                 <div class="w3-row w3-padding-32">
                     <div class="w3-quarter">
-                        <p>Romina</p>
+                      <li><p>Romina</p>
                         <img src="/imagenes/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                    </div>
+                    </div></li>
                     <div class="w3-quarter">
-                        <p>Daniel</p>
+                        <li><p>Daniel</p>
                         <img src="/imagenes/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                    </div>
+                    </div></li>
                     <div class="w3-quarter">
-                        <p>Gaston</p>
+                        <li><p>Gaston</p>
                         <img src="/imagenes/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </div>
+                    </div></li>
                     <div class="w3-quarter">
-                        <p>Melina</p>
+                        <li><p>Melina</p>
                         <img src="/imagenes/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </div>
+                    </div></li>
                 </div>
+                </ul>
             </div>
 
             <!-- The Tour Section -->
