--- a/views/index.erb
+++ b/views/index.erb
@@ -143,11 +143,11 @@
                     <div class="w3-quarter">
                         <li><p>Gaston</p>
                         <img src="/imagenes/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </div></li>
+                    </li></div>
                     <div class="w3-quarter">
                         <li><p>Melina</p>
                         <img src="/imagenes/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </div></li>
+                    </li></div>
                 </div>
                 </ul>
             </div>
