--- a/views/index.erb
+++ b/views/index.erb
@@ -113,38 +113,38 @@
                 <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta y Melina en percusión
                 </p>
                 <div class="w3-row w3-padding-32">
-                    <div class="w3-quarter">
+                    <div class="w3-half">
                       <ul><li><p>Beto</p>
                         <img src="/imagenes/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div></li>
-                    <div class="w3-quarter">
+                    <div class="w3-half">
                         <li><p>Uriel</p>
                         <img src="/imagenes/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div></li>
-                    <div class="w3-quarter">
+                    <div class="w3-half">
                         <li><p>Hernán</p>
                         <img src="/imagenes/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div></li>
-                    <div class="w3-quarter">
+                    <div class="w3-half">
                         <li><p>Danilo</p>
                         <img src="/imagenes/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div></li>
                 </div>
 
                 <div class="w3-row w3-padding-32">
-                    <div class="w3-quarter">
+                    <div class="w3-half">
                       <li><p>Romina</p>
                         <img src="/imagenes/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div></li>
-                    <div class="w3-quarter">
+                    <div class="w3-half">
                         <li><p>Daniel</p>
                         <img src="/imagenes/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div></li>
-                    <div class="w3-quarter">
+                    <div class="w3-half">
                         <li><p>Gaston</p>
                         <img src="/imagenes/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </li></div>
-                    <div class="w3-quarter">
+                    <div class="w3-half">
                         <li><p>Melina</p>
                         <img src="/imagenes/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </li></div>
