--- a/views/index.erb
+++ b/views/index.erb
@@ -106,50 +106,54 @@
 
             <!-- The Band Section -->
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
-               <h2 class="w3-wide">LA BANDA</h2>
+                <h2 class="w3-wide">LA BANDA</h2>
                 <p class="w3-opacity">
                     <i>Fiesta! ue ue uep !</i>
                 </p>
-                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta y Melina en percusión
+                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta, Melina en percusión, Tecladista en teclados
                 </p>
                 <div class="w3-row w3-padding-32">
-                    <div class="w3-half">
-                      <ul><li><p>Beto</p>
+                    <div class="w3-third">
+                        <p>Beto</p>
                         <img src="/imagenes/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                    </div></li>
-                    <div class="w3-half">
-                        <li><p>Uriel</p>
+                    </div>
+                    <div class="w3-third">
+                        <p>Uriel</p>
                         <img src="/imagenes/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                    </div></li>
-                    <div class="w3-half">
-                        <li><p>Hernán</p>
+                    </div>
+                    <div class="w3-third">
+                        <p>Hernán</p>
                         <img src="/imagenes/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </div></li>
-                    <div class="w3-half">
-                        <li><p>Danilo</p>
+                    </div>
+                    <div class="w3-third">
+                        <p>Danilo</p>
                         <img src="/imagenes/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </div></li>
+                    </div>
                 </div>
 
                 <div class="w3-row w3-padding-32">
-                    <div class="w3-half">
-                      <li><p>Romina</p>
+                    <div class="w3-third">
+                        <p>Romina</p>
                         <img src="/imagenes/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                    </div></li>
-                    <div class="w3-half">
-                        <li><p>Daniel</p>
+                    </div>
+                    <div class="w3-third">
+                        <p>Daniel</p>
                         <img src="/imagenes/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                    </div></li>
-                    <div class="w3-half">
-                        <li><p>Gaston</p>
+                    </div>
+                    <div class="w3-third">
+                        <p>Gaston</p>
                         <img src="/imagenes/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </li></div>
-                    <div class="w3-half">
-                        <li><p>Melina</p>
+                    </div>
+                    <div class="w3-third">
+                        <p>Melina</p>
                         <img src="/imagenes/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                    </li></div>
+                    </div>
+                    <div class="w3-third">
+                        <p>Tecladista</p>
+                        <img src="/imagenes/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                    </div>
+
                 </div>
-                </ul>
             </div>
 
             <!-- The Tour Section -->
@@ -192,24 +196,24 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-    <a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo">
-        <i class="fa fa-facebook-official"></i>
-    </a>
-    <a href="#" class="w3-hover-text-red">
-        <i class="fa fa-pinterest-p"></i>
-    </a>
-    <a href="#" class="w3-hover-text-light-blue">
-        <i class="fa fa-twitter"></i>
-    </a>
-    <a href="#" class="w3-hover-text-grey">
-        <i class="fa fa-flickr"></i>
-    </a>
-    <a href="#" class="w3-hover-text-indigo">
-        <i class="fa fa-linkedin"></i>
-    </a>
-    <p class="w3-medium">Creado por Buena Cosecha - 2016
-        <a href="#" target="_blank">https://www.facebook.com/buenacosechabanda</a>
-    </p>
+<a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo">
+    <i class="fa fa-facebook-official"></i>
+</a>
+<a href="#" class="w3-hover-text-red">
+    <i class="fa fa-pinterest-p"></i>
+</a>
+<a href="#" class="w3-hover-text-light-blue">
+    <i class="fa fa-twitter"></i>
+</a>
+<a href="#" class="w3-hover-text-grey">
+    <i class="fa fa-flickr"></i>
+</a>
+<a href="#" class="w3-hover-text-indigo">
+    <i class="fa fa-linkedin"></i>
+</a>
+<p class="w3-medium">Creado por Buena Cosecha - 2016
+    <a href="#" target="_blank">https://www.facebook.com/buenacosechabanda</a>
+</p>
 </footer>
 
 <script src="/js/slide.js"></script>
