--- a/views/index.erb
+++ b/views/index.erb
@@ -110,49 +110,45 @@
                 <p class="w3-opacity">
                     <i>Fiesta! ue ue uep !</i>
                 </p>
-                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta, Melina en percusión, Tecladista en teclados
+                <p class="w3-justify">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta y Melina en percusión
                 </p>
-            </div>
-
-            <div class="w3-row w3-padding-32">
-                <div class="w3-third">
-                    <p>Beto</p>
-                    <img src="/imagenes/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                </div>
-                <div class="w3-third">
-                    <p>Uriel</p>
-                    <img src="/imagenes/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                </div>
-                <div class="w3-third">
-                    <p>Hernán</p>
-                    <img src="/imagenes/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                </div>
-                <div class="w3-third">
-                    <p>Danilo</p>
-                    <img src="/imagenes/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                </div>
-
-                <div class="w3-third">
-                    <p>Romina</p>
-                    <img src="/imagenes/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                </div>
-                <div class="w3-third">
-                    <p>Daniel</p>
-                    <img src="/imagenes/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-                </div>
-                <div class="w3-third">
-                    <p>Gaston</p>
-                    <img src="/imagenes/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                </div>
-                <div class="w3-third">
-                    <p>Melina</p>
-                    <img src="/imagenes/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
-                </div>
-                <div class="w3-third">
-                    <p>Tecladista</p>
-                    <img src="/imagenes/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                <div class="w3-row w3-padding-32">
+                    <div class="w3-quarter">
+                        <p>Beto</p>
+                        <img src="/imagenes/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                    </div>
+                    <div class="w3-quarter">
+                        <p>Uriel</p>
+                        <img src="/imagenes/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                    </div>
+                    <div class="w3-quarter">
+                        <p>Hernán</p>
+                        <img src="/imagenes/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                    </div>
+                    <div class="w3-quarter">
+                        <p>Danilo</p>
+                        <img src="/imagenes/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                    </div>
                 </div>
 
+                <div class="w3-row w3-padding-32">
+                    <div class="w3-quarter">
+                        <p>Romina</p>
+                        <img src="/imagenes/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                    </div>
+                    <div class="w3-quarter">
+                        <p>Daniel</p>
+                        <img src="/imagenes/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                    </div>
+                    <div class="w3-quarter">
+                        <p>Gaston</p>
+                        <img src="/imagenes/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                    </div>
+                    <div class="w3-quarter">
+                        <p>Melina</p>
+                        <img src="/imagenes/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                    </div>
+                </div>
             </div>
 
             <!-- The Tour Section -->
