--- a/views/index.erb
+++ b/views/index.erb
@@ -79,30 +79,94 @@
             <div class="mySlides w3-display-container">
                 <img src="/imagenes/logo.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Proximamente!</h3>
+                    <h3>Buena Cosecha!</h3>
                     <p>
-                        <b>mas novedades</b>
+                        <b>Es lo que somos</b>
                     </p>
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/banda1.jpg" style="width:100%">
+                <img src="/imagenes/banda3.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Proximamente</h3>
+                    <h3>Buena Cosecha!</h3>
                     <p>
-                        <b>mas novedades</b>
+                        <b>en vivo</b>
                     </p>
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/banda2.jpg" style="width:100%">
+                <img src="/imagenes/banda4.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Proximamente</h3>
+                    <h3>Danilo!</h3>
                     <p>
-                        <b>mas novedades</b>
+                        <b>Buena Cosecha!</b>
                     </p>
                 </div>
             </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/banda5.jpg" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Romi!</h3>
+                    <p>
+                        <b>Buena Cosecha!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/banda6.jpg" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Dani!</h3>
+                    <p>
+                        <b>Buena Cosecha!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/banda7.jpg" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Danilo!</h3>
+                    <p>
+                        <b>Buena Cosecha!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/banda8.jpg" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Beto!</h3>
+                    <p>
+                        <b>Buena Cosecha!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/banda9.jpg" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Gaston!</h3>
+                    <p>
+                        <b>Buena Cosecha!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/banda10.jpg" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Gaston</h3>
+                    <p>
+                        <b>Buena Cosecha!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/banda11.jpg" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Buena Cosecha!</h3>
+                    <p>
+                        <b>En vivo!</b>
+                    </p>
+                </div>
+            </div>
+
 
             <!-- The Band Section -->
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
