--- a/views/index.erb
+++ b/views/index.erb
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/banda3.jpg" style="width:100%">
+                <img src="/imagenes/galeria/banda2.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/banda4.jpg" style="width:100%">
+                <img src="/imagenes/galeria/danilo.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Danilo!</h3>
                     <p>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/banda5.jpg" style="width:100%">
+                <img src="/imagenes/galeria/romi.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Romi!</h3>
                     <p>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/banda6.jpg" style="width:100%">
+                <img src="/imagenes/galeria/dani.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Dani!</h3>
                     <p>
@@ -122,16 +122,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/banda7.jpg" style="width:100%">
-                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Danilo!</h3>
-                    <p>
-                        <b>Buena Cosecha!</b>
-                    </p>
-                </div>
-            </div>
-            <div class="mySlides w3-display-container">
-                <img src="/imagenes/banda8.jpg" style="width:100%">
+                <img src="/imagenes/galeria/beto2.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Beto!</h3>
                     <p>
@@ -140,7 +131,16 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/banda9.jpg" style="width:100%">
+                <img src="/imagenes/galeria/uri.jpg" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Uri!</h3>
+                    <p>
+                        <b>Buena Cosecha!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/galeria/gaston.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Gaston!</h3>
                     <p>
@@ -149,18 +149,27 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/banda10.jpg" style="width:100%">
+                <img src="/imagenes/galeria/hernan.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Gaston</h3>
+                    <h3>Hernan!</h3>
                     <p>
                         <b>Buena Cosecha!</b>
                     </p>
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/banda11.jpg" style="width:100%">
+                <img src="/imagenes/galeria/vientos.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-                    <h3>Buena Cosecha!</h3>
+                    <h3>Vientos!</h3>
+                    <p>
+                        <b>En vivo!</b>
+                    </p>
+                </div>
+            </div>
+            <div class="mySlides w3-display-container">
+                <img src="/imagenes/galeria/pedales.jpg" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+                    <h3>Rock!</h3>
                     <p>
                         <b>En vivo!</b>
                     </p>
