--- a/views/index.erb
+++ b/views/index.erb
@@ -188,38 +188,38 @@
                 <div class="w3-row w3-padding-32">
                     <div class="w3-quarter">
                         <p>Beto</p>
-                        <img src="/imagenes/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/perfil/betoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
                         <p>Uriel</p>
-                        <img src="/imagenes/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/perfil/uriperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
                         <p>Hernán</p>
-                        <img src="/imagenes/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/perfil/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
                         <p>Danilo</p>
-                        <img src="/imagenes/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/perfil/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
                 </div>
 
                 <div class="w3-row w3-padding-32">
                     <div class="w3-quarter">
                         <p>Romina</p>
-                        <img src="/imagenes/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/perfil/romiperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
                         <p>Daniel</p>
-                        <img src="/imagenes/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/perfil/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
                         <p>Gaston</p>
-                        <img src="/imagenes/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/perfil/gastonperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
                     <div class="w3-quarter">
                         <p>Melina</p>
-                        <img src="/imagenes/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
+                        <img src="/imagenes/perfil/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%">
                     </div>
                 </div>
             </div>
