--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,16 @@
                     <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">HOME</a>
                 </li>
                 <li class="w3-hide-small">
-                    <a href="#" class="w3-padding-large">MÚSICA</a>
+                    <a href="#" class="w3-padding-large w3-dropdown-hover">MÚSICA</a>
+                    <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MAS
+                        <i class="fa fa-caret-down"></i>
+                    </a>
+                    <div class="w3-dropdown-content w3-white w3-card-4">
+                        <a href="#">Audios</a>
+                        <a href="#">Videos</a>
+                        <a href="#">Letras</a>
+                    </div>
+
                 </li>
                 <li class="w3-hide-small">
                     <a href="#" class="w3-padding-large">FECHAS</a>
