--- a/views/index.erb
+++ b/views/index.erb
@@ -27,9 +27,9 @@
                 <li>
                     <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">HOME</a>
                 </li>
-                <li class="w3-hide-small">
-                    <a href="#" class="w3-padding-large w3-dropdown-hover">MÚSICA</a>
-                    <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MAS
+                <li class="w3-hide-small w3-dropdown-hover">
+                    <a href="#" class="w3-padding-large">MÚSICA</a>
+                    <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MUSICA
                         <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="w3-dropdown-content w3-white w3-card-4">
@@ -184,7 +184,6 @@
                     </p>
                 </div>
             </div>
-
 
             <!-- The Band Section -->
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
