--- a/views/index.erb
+++ b/views/index.erb
@@ -31,7 +31,7 @@
                     <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">MÚSICA
                         <i class="fa fa-caret-down"></i>
                     </a>
-                    <div class="w3-dropdown-content w3-white w3-card-4 w3-center-align">
+                    <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                         <a href="#">Audios</a>
                         <a href="#">Videos</a>
                         <a href="#">Letras</a>
