stylesheets en el layout

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,8 @@
 <html>
     <head>
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="/imagenes/favicon.ico" rel="shortcut icon">
         <title>Buena Cosecha, Ska Reggae</title>
     </head>
