--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="/imagenes/favicon.ico" rel="shortcut icon">
@@ -17,8 +18,7 @@
             </li>
             <li>
                 <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">
-                    <i class="icon-home"></i>
-                    icon-home
+                    <i class="material-icons">home</i>
                 </a>
 
             </li>
