texto en el menu

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,13 +18,13 @@
             </li>
             <li>
                 <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">
-                    <i class="material-icons">home</i>
+                    <i class="material-icons">home</i> Volver
                 </a>
 
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">
-                    <i class="material-icons">play_arrow</i>
+                    <i class="material-icons">play_arrow</i> Música
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="#">Audios</a>
@@ -35,17 +35,17 @@
 
             <li class="w3-hide-small">
                 <a href="#" class="w3-padding-large">
-                    <i class="material-icons">skip_next</i>
+                    <i class="material-icons">skip_next</i> Recitales
                 </a>
             </li>
             <li class="w3-hide-small">
                 <a href="#" class=" w3-padding-large">
-                    <i class="material-icons">mail</i>
+                    <i class="material-icons">mail</i> Contacto
                 </a>
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">
-                    <i class="material-icons">arrow_drop_down_circle</i>
+                    <i class="material-icons">arrow_drop_down_circle</i> Mas
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="#">Merchandising</a>
