menu alineado a la derecha

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,11 +18,11 @@
             </li>
             <li>
                 <a href="#" class="w3-hover-none w3-hover-text-grey w3-padding-large">
-                    <i class="material-icons">home</i> 
+                    <i class="material-icons">home</i>
                 </a>
 
             </li>
-            <li class="w3-hide-small w3-dropdown-hover">
+            <li class="w3-hide-small w3-dropdown-hover w3-right">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">
                     <i class="material-icons">play_arrow</i> Música
                 </a>
@@ -33,17 +33,17 @@
                 </div>
             </li>
 
-            <li class="w3-hide-small">
+            <li class="w3-hide-small w3-right">
                 <a href="#" class="w3-padding-large">
                     <i class="material-icons">skip_next</i> Recitales
                 </a>
             </li>
-            <li class="w3-hide-small">
+            <li class="w3-hide-small w3-right">
                 <a href="#" class=" w3-padding-large">
                     <i class="material-icons">mail</i> Contacto
                 </a>
             </li>
-            <li class="w3-hide-small w3-dropdown-hover">
+            <li class="w3-hide-small w3-dropdown-hover w3-right">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">
                     <i class="material-icons">arrow_drop_down_circle</i> Mas
                 </a>
