menu recitales proximos y pasados

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,8 +23,9 @@
 
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
-                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">
-                    <i class="material-icons">play_arrow</i> Música
+                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="Musica">
+                    <i class="material-icons">play_arrow</i>
+                    Música
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="#">Audios</a>
@@ -33,19 +34,27 @@
                 </div>
             </li>
 
-            <li class="w3-hide-small">
-                <a href="#" class="w3-padding-large">
-                    <i class="material-icons">skip_next</i> Recitales
+            <li class="w3-hide-small w3-dropdown-hover">
+                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="Musica">
+                    <i class="material-icons">skip_next</i>
+                    Recitales
+                    <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
+                        <a href="#">Próximos</a>
+                        <a href="#">Pasados</a>
+                    </div>
+
                 </a>
             </li>
             <li class="w3-hide-small">
                 <a href="#" class=" w3-padding-large">
-                    <i class="material-icons">mail</i> Contacto
+                    <i class="material-icons">mail</i>
+                    Contacto
                 </a>
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">
-                    <i class="material-icons">arrow_drop_down_circle</i> Mas
+                    <i class="material-icons">arrow_drop_down_circle</i>
+                    Mas
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="#">Merchandising</a>
