links a paginas interiores

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,9 +28,9 @@
                     Música
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
-                    <a href="#">Audios</a>
-                    <a href="#">Videos</a>
-                    <a href="#">Letras</a>
+                    <a href="audios">Audios</a>
+                    <a href="videos">Videos</a>
+                    <a href="letras">Letras</a>
                 </div>
             </li>
 
@@ -38,12 +38,12 @@
                 <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="Musica">
                     <i class="material-icons">skip_next</i>
                     Recitales
-                    <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align">
-                        <a href="#">Próximos</a>
-                        <a href="#">Pasados</a>
-                    </div>
-
                 </a>
+                <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align">
+                    <a href="proximos">Próximos</a>
+                    <a href="pasados">Pasados</a>
+                </div>
+
             </li>
             <li class="w3-hide-small">
                 <a href="#" class=" w3-padding-large">
@@ -52,13 +52,13 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
-                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="More">
+                <a href="javascript:void(0)" class="w3-hover-none w3-padding-large" title="Mas">
                     <i class="material-icons">arrow_drop_down_circle</i>
                     Mas
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
-                    <a href="#">Merchandising</a>
-                    <a href="#">Entradas</a>
+                    <a href="merchandising">Merchandising</a>
+                    <a href="entradas">Entradas</a>
                 </div>
             </li>
             <li class="w3-hide-small w3-right">
