cambiando imagenes slide y agregando fotos locabohemia

--- a/views/index.erb
+++ b/views/index.erb
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/banda2.jpg" style="width:100%">
+                <img src="/imagenes/galeria/band1.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/romi.jpg" style="width:100%">
+                <img src="/imagenes/galeria/rom.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Romi!</h3>
                     <p>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/dani.jpg" style="width:100%">
+                <img src="/imagenes/galeria/dan.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Dani!</h3>
                     <p>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/beto2.jpg" style="width:100%">
+                <img src="/imagenes/galeria/bet.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Beto!</h3>
                     <p>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/gaston.jpg" style="width:100%">
+                <img src="/imagenes/galeria/gast.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Gaston!</h3>
                     <p>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="mySlides w3-display-container">
-                <img src="/imagenes/galeria/hernan.jpg" style="width:100%">
+                <img src="/imagenes/galeria/hern.jpg" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Hernan!</h3>
                     <p>
