--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -1,10 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
+        <title>Buena Cosecha, Ska Reggae | Recitales pasados</title>
+    </head>
+    <body>
+        <div class="w3-container w3-teal">
+            <h1>Loca Bohemia | 20 de Agosto del 2016</h1>
+        </div>
 
-  </body>
+        <div class="w3-row-padding w3-margin-top">
+
+            <div class="w3-third">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/band1.jpg" style="width:100%">
+                    <div class="w3-container">
+                        <h5>5 La banda completa</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w3-third">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/bet.jpg" style="width:100%">
+                    <div class="w3-container">
+                        <h5>El Beto!</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w3-third">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/dan.jpg" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Dani!</h5>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="w3-row-padding w3-margin-top">
+
+            <div class="w3-third">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/danilo.jpg" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Danilo!</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w3-third">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/gast.jpg" style="width:100%">
+                    <div class="w3-container">
+                        <h5>El pela!</h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w3-third">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/hern.jpg" style="width:100%">
+                    <div class="w3-container">
+                        <h5>Herny!</h5>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </body>
 </html>
