--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Buena Cosecha, Ska Reggae | Próximos recitales</title>
   </head>
   <body>
 
